<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:id="@+id/idAddPeques">

    <include android:id="@+id/appbar"
             layout="@layout/toolbar" />

    <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextNom"
            android:layout_alignParentStart="true"
            android:id="@+id/imageViewContact"
            android:src="@drawable/ic_face_black_24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/editTextPat"
            android:inputType="textPersonName"
            android:hint="@string/nom"
            android:ems="10"
            android:id="@+id/editTextNom"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextNom"
            android:layout_toEndOf="@id/imageViewContact"
            android:inputType="textPersonName"
            android:hint="@string/nomP"
            android:ems="10"
            android:id="@+id/editTextPat" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPat"
            android:layout_toEndOf="@id/imageViewContact"
            android:inputType="textPersonName"
            android:hint="@string/nomM"
            android:ems="10"
            android:id="@+id/editTextMat"/>

    <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextMat"
            android:layout_alignParentStart="true"
            android:id="@+id/imageViewCel"
            android:src="@drawable/ic_contact_phone_black_24dp" android:layout_above="@+id/editTextCumple"
            android:layout_toStartOf="@+id/editTextMat"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextMat"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/editTextMat"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextCel"
            android:hint="@string/cel"/>

    <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageViewCel"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/editTextCumple"
            android:layout_toStartOf="@+id/editTextCel"
            android:id="@+id/imageViewCalendar"
            android:src="@drawable/ic_redeem_black_24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextCel"
            android:layout_alignEnd="@+id/editTextCel"
            android:layout_toEndOf="@+id/imageViewCel"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editTextCumple"
            android:hint="@string/cumplea"/>

    <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_below="@id/imageViewCalendar"
            android:layout_alignBottom="@+id/editTextComent"
            android:layout_toStartOf="@+id/editTextCumple"
            android:layout_gravity="center_vertical"
            android:id="@+id/imageViewComent"
            android:src="@drawable/ic_comment_black_36dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextCumple"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imageViewCalendar"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextComent"
            android:hint="@string/coment"/>

        <ImageView
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_alignBottom="@+id/imageButtonCamPeque"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/imageButtonCamPeque"
                android:id="@+id/imageViewCam"
                android:src="@drawable/ic_photo_camera_black_24dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextComent"
                android:layout_toEndOf="@+id/imageViewComent"
                android:id="@+id/imageButtonCamPeque"
                android:src="@android:drawable/ic_menu_camera"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButtonCamPeque"
                android:layout_toEndOf="@+id/imageViewCam"
                android:id="@+id/imageViewPequeProfile"/>

</RelativeLayout>